# rustatio

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  mise.toml  tauri.conf.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
rustatio-core/src/: logger.rs
rustatio-desktop/: tauri.conf.json
rustatio-desktop/icons/: icon.icns
rustatio-desktop/src/: main.rs
rustatio-wasm/src/: lib.rs
src/: lib.rs  main.rs
src/core/: config.rs  faker.rs  logger.rs  validation.rs
src/core/protocol/: tracker.rs
src/core/torrent/: info.rs
ui/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
ui/public/: site.webmanifest
ui/src/: App.svelte  app.css
ui/src/components/: AboutDialog.svelte  ConfigurationForm.svelte  Controls.svelte  Header.svelte  InstanceTabs.svelte  LiveStats.svelte  Logs.svelte  PeerDistribution.svelte  ProgressBars.svelte  ProgressiveRates.svelte  ProxySettings.svelte  RateGraph.svelte  SessionStats.svelte  StatusBar.svelte  StopConditions.svelte  ThemeIcon.svelte  TorrentSelector.svelte  TotalStats.svelte
ui/src/lib/: api.js  instanceStore.js
ui/src/lib/components/ui/: button.svelte  card.svelte  checkbox.svelte  input.svelte  label.svelte  select.svelte
